@@ -17,3 +17,4 @@ t/01_rlevec.t
 t/02_cmpvec.t
 t/03_setops.t
 t/04_types.t
+t/05_vcos.t
