@@ -1053,6 +1053,113 @@ EOD
 
 
 ##======================================================================
+## Miscellaneous Vector-Valued Operations
+##======================================================================
+pp_addpm(<<'EOPM');
+
+=pod
+
+=head1 Miscellaneous Vector-Valued Operations
+
+=cut
+
+EOPM
+
+##--------------------------------------------------------------
+## vv_vcos()
+my $vv_vcos_code =
+'
+    $GENERIC(vcos) anorm, bnorm, aval, vval;
+
+    threadloop %{
+      /*-- initialize: bnorm --*/
+      bnorm = 0;
+      loop(M) %{
+#ifdef PDL_BAD_CODE
+	if ($ISGOOD(b()))
+#endif
+          bnorm += $b() * $b();
+      %}
+      bnorm = sqrt(bnorm);
+      if (bnorm == 0) {
+         /*-- null-vector b(): set all vcos()=NAN --*/
+         loop (N) %{ $vcos() = NAN; %}
+      }
+      else {
+         /*-- usual case: compute values for N-slice of b() --*/
+         loop (N) %{
+           anorm = 0;
+           vval  = 0;
+           loop (M) %{
+#ifdef PDL_BAD_CODE
+	     if ($ISGOOD(a())) {
+               aval   = $a();
+               anorm += aval * aval;
+               if ($ISGOOD(b()))
+                 vval  += aval * $b();
+             }
+#else
+             aval   = $a();
+             anorm += aval * aval;
+             vval  += aval * $b();
+#endif
+           %}
+
+           /*-- normalize --*/
+           anorm = sqrt(anorm);
+           if (anorm != 0) {
+             /*-- usual case a(), b() non-null --*/
+             $vcos() = vval / (anorm * bnorm);
+           } else {
+             /*-- null-vector a(): set vcos()=NAN --*/
+             $vcos() = NAN;
+           }
+        %}
+      }
+    %}
+';
+
+pp_def('vv_vcos',
+       Pars => join('',
+		    "a(M,N);",            ##-- logical (D,T)
+   		    "b(M);",              ##-- logical (D,1)
+		    "float+ [o]vcos(N);", ##-- logical (T)
+		   ),
+       HandleBad => 1,
+       Code => $vv_vcos_code,
+       BadCode => $vv_vcos_code,
+       CopyBadStatusCode =>
+q{
+   if ( $ISPDLSTATEBAD(a) || $ISPDLSTATEBAD(b) ) {
+     $SETPDLSTATEBAD(vcos);
+   }
+},
+  Doc =>
+q{
+Computes the vector cosine similarity of a dense vector $b() with respect to each row $a(*,i)
+of a dense PDL $a().  This is basically the same thing as:
+
+ ($a * $b)->sumover / ($a->pow(2)->sumover->sqrt * $b->pow(2)->sumover->sqrt)
+
+... but should be must faster to compute, and avoids allocating potentially large temporaries for
+the vector magnitudes.  Output values in $vcos() are cosine similarities in the range [-1,1],
+except for zero-magnitude vectors which will result in NaN values in $vcos().
+
+You can use PDL threading to batch-compute distances for multiple $b() vectors simultaneously:
+
+  $bx   = random($M, $NB);   ##-- get $NB random vectors of size $N
+  $vcos = vv_vcos($a,$bx);   ##-- $vcos(i,j) ~ sim($a(,i),$b(,j))
+
+},
+  BadDoc=>
+q{
+vv_vcos() will set the bad status flag on the output piddle $vcos() if it is set on either of the input
+piddles $a() or $b(), but BAD values will otherwise be ignored for computing the cosine similary.
+},
+);
+
+
+##======================================================================
 ## Footer Administrivia
 ##======================================================================
 
